# core

./: .dir-locals.el  CMakeLists.txt  GPATH  GRTAGS  GTAGS  README.md  TODO.txt
bindings/ruby/: Makefile  brainy.i  brainy_neural.i  brainy_neural_wrap.cxx  brainy_util.i  brainy_util_wrap.cxx  brainy_wrap.cxx  extconf.rb  neural.bundle
examples/: CMakeLists.txt  mnist.cc  xor.cpp
ext/brainy/: Gemfile  LICENSE.txt  README.md  Rakefile  brainy.gemspec
ext/brainy/lib/: brainy.rb
include/: CMakeLists.txt
include/brainy/: Connection.hpp  Layer.hpp  Neuron.hpp  TrainingData.hpp  TrainingPair.hpp  TrainingSet.hpp  Util.hpp  VectorTrainingSet.hpp  brainy.hpp  layer.h  neuron.h  training_set.h  vector_training_set.h
include/brainy/activation/: ActivationFunction.hpp  Linear.hpp  Sigmoid.hpp  Tanh.hpp  linear.h  sigmoid.h  tanh.h
include/brainy/error/: MSE.hpp  RMS.hpp  error_function.h  mse.h  rms.h
include/brainy/network/: FeedForward.hpp  Network.hpp  feed_forward.h
include/brainy/neural/: Connection.hpp  Layer.hpp  Neuron.hpp
include/brainy/randomize/: BasicRandomize.hpp  Randomize.hpp  basic_randomize.h
include/brainy/trainer/: BackPropagation.hpp  LearningRate.hpp  Momentum.hpp  Trainer.hpp  back_propagation.h  trainer.h
src/: CMakeLists.txt  Connection.cpp  Layer.cpp  Neuron.cpp  TrainingData.cpp  TrainingPair.cpp  TrainingSet.cpp  Util.cpp  VectorTrainingSet.cpp  connection.cc  layer.cc  neuron.cc  training_data.cc  training_pair.cc  training_set.cc  util.cc  vector_training_set.cc
src/activation/: ActivationFunction.cpp  Linear.cpp  Sigmoid.cpp  activation_function.cc  linear.cc  sigmoid.cc  tanh.cc
src/brainy/: brainy.hh  connection.cc  connection.hh  input_layer.cc  input_layer.hh  layer.cc  layer.hh  neuron.cc  neuron.hh  tanh_layer.hh  training_data.cc  training_data.hh  training_pair.cc  training_pair.hh  training_set.cc  training_set.hh  util.cc  vector_training_set.cc  vector_training_set.hh
src/brainy/activation/: activation_function.cc  activation_function.hh  linear.cc  linear.hh  sigmoid.cc  sigmoid.hh  tanh.cc  tanh.hh
src/brainy/error/: error_function.cc  error_function.hh  mse.cc  mse.hh  rms.cc  rms.hh
src/brainy/network/: feed_forward.cc  feed_forward.hh  network.cc  network.hh
src/brainy/randomize/: basic_randomize.cc  basic_randomize.hh  randomize.cc
src/brainy/trainer/: back_propagation.cc  back_propagation.hh  goal.cc  goal.hh  learning_rate.cc  learning_rate.hh  momentum.cc  momentum.hh  trainer.cc  trainer.hh
src/error/: ErrorFunction.cpp  MSE.cpp  RMS.cpp  error_function.cc  mse.cc  rms.cc
src/network/: FeedForward.cpp  Network.cpp  feed_forward.cc  network.cc
src/neural/: Connection.cpp  Layer.cpp  Neuron.cpp  TrainingData.cpp  TrainingPair.cpp
src/randomize/: BasicRandomize.cpp  Randomize.cpp  basic_randomize.cc  randomize.cc
src/trainer/: BackPropagation.cpp  LearningRate.cpp  Momentum.cpp  Trainer.cpp  back_propagation.cc  learning_rate.cc  momentum.cc  trainer.cc
tests/: CMakeLists.txt  Connection.cpp  Neuron.cpp  Sigmoid.cpp  Tanh.cpp
(+54 files in other folders)
